--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 tcod = "~=11.15.3"
+esper = "~=1.3.0"
 
 [requires]
 python_version = "3.7"
